--- a/elongated_musk.html
+++ b/elongated_musk.html
@@ -20,6 +20,11 @@
     margin-top: 42px;
 }
 
+.me {
+    width: 240px;
+    height: auto;
+}
+
 #mc_embed_signup {
     margin-top: 10px;
     width: 100%;
@@ -34,6 +39,10 @@
 
 .smallText {
     font-style: italic;
+}
+
+li {
+    padding-top: 10px;
 }
 
 </style>
@@ -57,6 +66,10 @@
         <div class="subSection">
             <span style="color:#7b3f9e;">Currently</span> I am the cofounder/CTO of a stealth company within the gaming space (located in NYC).
              We recently finished fundraising and I promise we won't be stealth much longer. Just need to come up with a name for the company lmaooo. 
+        </div>
+
+        <div class="subSection">
+            <img class="me" src="static/thefuck.jpg"/>
         </div>
 
         <div class="subSection">
@@ -95,6 +108,32 @@
             DeepLeague (open source, deep learning based tool)
             UCF CRCV research on end-to-end deep learning for self-driving cars (beat NVIDIAs results but Google
             published with the same idea 3 weeks later RIP)</div>
+        </div>
+
+        <div class="subSection">
+            Interesting blog posts I've written:
+            <ul>
+                <li>
+                    DeepOverwatch: combining TensorFlow.js, Overwatch, Computer Vision, and Music.
+                    <a target="_blank" href="https://medium.com/@farzatv/deepoverwatch-combining-tensorflow-js-overwatch-computer-vision-and-music-1a84d4598bc0">[Link]</a>
+                </li>
+                <li>
+                    DeepLeague: leveraging computer vision and deep learning on the League of Legends mini map + giving away a dataset of over 100,000 labeled images to further esports analytics research
+                    <a target="_blank" href="https://medium.com/@farzatv/deepleague-leveraging-computer-vision-and-deep-learning-on-the-league-of-legends-mini-map-giving-d275fd17c4e0">[Link]</a>
+                </li>
+                <li>
+                    PogChampNet: how we used Twitch chat + deep learning to create automatic game highlights with only video as input at Visor.gg.
+                    <a target="_blank" href="https://medium.com/@farzatv/pogchampnet-how-we-used-twitch-chat-deep-learning-to-create-automatic-game-highlights-with-only-61ed7f7b22d4">[Link]</a>
+                </li>
+                <li>
+                    How I created a free, online, mentor-based code school for gamers with volunteers from Google, Microsoft, Amazon, and Twitch
+                    <a target="_blank" href="https://medium.com/@farzatv/how-i-created-a-free-online-mentor-based-code-school-with-volunteers-from-google-microsoft-db56268e9f8d">[Link]</a>
+                </li>
+                <li>
+                    The story of mood.gg: how in 4 months I went from knowing nothing about web development to 3 million hits and one of the most successful third-party League of Legends apps of all time
+                    <a target="_blank" href="https://medium.com/@farzatv/the-story-of-mood-gg-5d21f2b19ec3">[Link]</a>
+                </li>
+            </ul>
         </div>
 
         <div class="subSection">
