--- a/garbanzo/one.html
+++ b/garbanzo/one.html
@@ -93,7 +93,7 @@
 
         <div class="subSection">
             The core theme of this track is King Theta's obsession with his own 
-            desolation and destruction. He screams lyrics like "shit's gonna cave in soon" and 
+            destruction. He screams lyrics like "shit's gonna cave in soon" and 
             "if I die do I get a fresh start". He's fighting between giving up on life and 
             continuing the fight as he beckons for any bit of support he can grab 
             with lyrics like "Baby, tell me imma be a star" and "save me, think I'm gonna fall apart".    
@@ -111,7 +111,7 @@
         </div>
 
         <div class="subSection">
-            King Theta's powerful singing is complemented beautifully by an extremely addictive
+            His powerful singing is complemented beautifully by an extremely addictive
             beat that can best be described as punk rock/alternative rock meets a modern-day 
             trap rap beat. It's extremely reminiscent of beats that the late Lil Peep used on 
             tracks that made him a superstar. I think many would actually say that King Theta 
