--- a/elongated_musk.html
+++ b/elongated_musk.html
@@ -64,8 +64,7 @@ li {
         </div>
         
         <div class="subSection">
-            <span style="color:#7b3f9e;">Currently</span> I am the cofounder/CTO of a stealth company within the gaming space (located in NYC).
-             We recently finished fundraising and I promise we won't be stealth much longer. Just need to come up with a name for the company lmaooo. 
+            <span style="color:#7b3f9e;">Currently</span> I am the CTO <a target="_blank" href="https://www.kanga.gg/"></a>
         </div>
 
         <div class="subSection">
