--- a/elongated_musk.html
+++ b/elongated_musk.html
@@ -64,7 +64,9 @@ li {
         </div>
         
         <div class="subSection">
-            <span style="color:#7b3f9e;">Currently</span> I am the CTO <a target="_blank" href="https://www.kanga.gg/"></a>
+            <span style="color:#7b3f9e;">Currently</span> I am the CTO of <a target="_blank" href="https://www.kanga.gg/">kanga.gg</a> 
+            - a product that makes it easier for gamers to find and stay connected the content creators they love and the esports they follow.
+            
         </div>
 
         <div class="subSection">
