--- a/elongated_musk.html
+++ b/elongated_musk.html
@@ -65,7 +65,7 @@ li {
         
         <div class="subSection">
             <span style="color:#7b3f9e;">Currently</span> I am the CTO of <a target="_blank" href="https://www.kanga.gg/">kanga.gg</a> 
-            - a product that makes it easier for gamers to find + stay connected the content creators they love and the esports they follow.
+            - a product that makes it easier for gamers to find + stay connected with the content creators they love and the esports they follow.
             
         </div>
 
