--- a/garbanzo/one.html
+++ b/garbanzo/one.html
@@ -1,43 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<style>
-.body {
-    background-color: white;
-}
-.mainContainer {
-    font-family: Open Sans,sans-serif;
-    margin: 30px 30px;
-}
-.mainTitle {
-    font-size: 35px;
-    font-weight: 300;
-}
-
-.subSection {
-    font-size: 17px;
-    font-weight: 100;
-    margin-top: 20px;
-}
-
-#mc_embed_signup {
-    margin-top: 10px;
-    width: 100%;
-}
-
-@media screen and (min-device-width: 600px) {
-  .mainContainer {
-    max-width: 500px;
-    margin: 60px 80px;
-  }
-}
-
-.smallText {
-    font-style: italic;
-}
-
-</style>
-
 <head>
     <title>Farza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon-16x16.png">
     <link rel="manifest" href="../static/site.webmanifest">
+    <link rel="stylesheet" type = "text/css" href="../static/dumb_css/notes.css"/>
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
